open wahi folder in vs studio code